--- a/index.html
+++ b/index.html
@@ -14,45 +14,47 @@
     </header>
 
     <main class="container">
+        
         <article class="card">
             <div class="card-image">
-                <img src="https://via.placeholder.com/400x225/000/fff?text=VIDEO+1" alt="Mystère">
+                <img src="https://via.placeholder.com/400x225/333/fff?text=+" alt="Miniature">
             </div>
             <div class="card-content">
-                <h3>Les OVNIs du Mont Chauve</h3>
-                <p>Enquête sur une observation historique survenue dans les Alpes en 1970.</p>
+                <h3>Titre de la Vidéo 1</h3>
+                <p>Résumé du premier mystère. Ce texte décrit brièvement le contenu de la vidéo pour donner envie aux visiteurs de cliquer.</p>
             </div>
         </article>
 
         <article class="card">
             <div class="card-image">
-                <img src="https://via.placeholder.com/400x225/000/fff?text=VIDEO+2" alt="Manoir">
+                <img src="https://via.placeholder.com/400x225/333/fff?text=+" alt="Miniature">
             </div>
             <div class="card-content">
-                <h3>Manoir Hanté du Blackwood</h3>
-                <p>Exploration nocturne dans l'une des demeures les plus redoutées d'Angleterre.</p>
+                <h3>Titre de la Vidéo 2</h3>
+                <p>Résumé du deuxième mystère. La mise en page est automatiquement alignée en deux colonnes sur les grands écrans.</p>
             </div>
         </article>
 
         <article class="card">
             <div class="card-image">
-                <img src="https://via.placeholder.com/400x225/000/fff?text=VIDEO+3" alt="Cercle">
+                <img src="https://via.placeholder.com/400x225/333/fff?text=+" alt="Miniature">
             </div>
             <div class="card-content">
-                <h3>Cercle de Culture - Mystère Résolu ?</h3>
-                <p>Analyse scientifique des formations géométriques apparues cet été.</p>
+                <h3>Titre de la Vidéo 3</h3>
+                <p>Analyse d'un phénomène inexpliqué. Les angles des cases sont arrondis pour un look moderne et propre.</p>
             </div>
         </article>
 
         <article class="card">
             <div class="card-image">
-                <img src="https://via.placeholder.com/400x225/000/fff?text=VIDEO+4" alt="Mothman">
+                <img src="https://via.placeholder.com/400x225/333/fff?text=+" alt="Miniature">
             </div>
             <div class="card-content">
-                <h3>La Légende du Mothman</h3>
-                <p>Retour sur les témoignages terrifiants de l'homme-papillon de Virginie.</p>
+                <h3>Titre de la Vidéo 4</h3>
+                <p>Le quatrième bloc vient compléter la grille. Sur mobile, toutes ces cases se mettront les unes sous les autres.</p>
             </div>
         </article>
+
     </main>
 
 </body>
