--- a/index.html
+++ b/index.html
@@ -13,49 +13,8 @@
         <p>Le passé n'a pas livré tous ses secrets...</p>
     </header>
 
-    <main class="container">
-        
-        <article class="card">
-            <div class="card-image">
-                <img src="https://via.placeholder.com/400x225/333/fff?text=+" alt="Miniature">
-            </div>
-            <div class="card-content">
-                <h3>Titre de la Vidéo 1</h3>
-                <p>Résumé du premier mystère. Ce texte décrit brièvement le contenu de la vidéo pour donner envie aux visiteurs de cliquer.</p>
-            </div>
-        </article>
+    <main class="container" id="video-grid"></main>
 
-        <article class="card">
-            <div class="card-image">
-                <img src="https://via.placeholder.com/400x225/333/fff?text=+" alt="Miniature">
-            </div>
-            <div class="card-content">
-                <h3>Titre de la Vidéo 2</h3>
-                <p>Résumé du deuxième mystère. La mise en page est automatiquement alignée en deux colonnes sur les grands écrans.</p>
-            </div>
-        </article>
-
-        <article class="card">
-            <div class="card-image">
-                <img src="https://via.placeholder.com/400x225/333/fff?text=+" alt="Miniature">
-            </div>
-            <div class="card-content">
-                <h3>Titre de la Vidéo 3</h3>
-                <p>Analyse d'un phénomène inexpliqué. Les angles des cases sont arrondis pour un look moderne et propre.</p>
-            </div>
-        </article>
-
-        <article class="card">
-            <div class="card-image">
-                <img src="https://via.placeholder.com/400x225/333/fff?text=+" alt="Miniature">
-            </div>
-            <div class="card-content">
-                <h3>Titre de la Vidéo 4</h3>
-                <p>Le quatrième bloc vient compléter la grille. Sur mobile, toutes ces cases se mettront les unes sous les autres.</p>
-            </div>
-        </article>
-
-    </main>
-
+    <script src="script.js"></script>
 </body>
 </html>
