--- a/video.html
+++ b/video.html
@@ -108,8 +108,8 @@
         // 1. La liste des vidéos (doit être identique à celle de script.js)
         const videos = [
             {
-                id: "nessie-video",
-                titre: "Le Secret du Loch Ness",
+                id: "lemonstredulochness",
+                titre: "e monstre du Loch Ness",
                 resume: "De nouvelles images radar révèlent une forme immense dans les profondeurs du lac écossais. S'agit-il du célèbre monstre ?",
                 urlVideo: "https://www.youtube.com/embed/dQw4w9WgXcQ" 
             },
