--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
     <header class="banner">
-        <h1>ARCHIVES MYSTÈRES</h1>
-        <p>Le passé n'a pas livré tous ses secrets...</p>
+        <h1>ÉTRANGE ET BIZARRE TV</h1>
+        <p>Je veux y croire...</p>
     </header>
 
     <main class="container" id="video-grid"></main>
