--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <header class="banner">
-        <img src="images/nanarbann.png" alt="Bannière">
+        <img src="images/bannanar.png" alt="Bannière">
     </header>
 
     <main class="container" id="video-grid"></main>
