--- a/video.html
+++ b/video.html
@@ -45,7 +45,7 @@
 <body>
 
     <div class="header-vhs">
-        <h2 style="margin:0; color:#eee;">MON VIDÉO CLUB</h2>
+       <img src="images/bannanar2.png" style="width:100%;">
     </div>
 
     <div class="container">
