--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
     
     <script src="videos.js"></script>
     <script src="script.js"></script>
+    <footer class="nanaro-footer">
+    <p>&copy; 2024 La Nanarothèque - La vidéothèque des films déliceusement mauvaisr</p>
+</footer>
 </body>
 </html>
