--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="videos.js"></script>
     <script src="script.js"></script>
     <footer class="nanaro-footer">
-    <p>&copy; 2024 La Nanarothèque - La vidéothèque des films déliceusement mauvaisr</p>
+    <p>&copy; 2024 La Nanarothèque - La vidéothèque des films déliceusement mauvais</p>
 </footer>
 </body>
 </html>
