--- a/video.html
+++ b/video.html
@@ -42,6 +42,11 @@
             position: relative;
         }
         iframe { width: 100%; height: 100%; border: none; }
+        .container {
+    width: 90%;
+    max-width: 1000px;
+    padding-bottom: 80px; /* Ajoute une marge de sécurité en bas */
+}
     </style>
 </head>
 <body>
